--- a/shop.css
+++ b/shop.css
@@ -26,10 +26,24 @@
     transform: scale(0.8);
 }
 
-.product-card .card {
-    margin-bottom: 3px;
-    /* Adjust this value to reduce space between cards */
+.product-card {
+    padding: 5px; /* Reduce padding within each product card */
 }
+
+.product-card .card {
+    margin-bottom: 10px; /* Reduce the margin between cards */
+}
+
+#product-list {
+    margin-left: -5px; /* Adjust negative margins to compensate for padding */
+    margin-right: -5px;
+}
+
+.col-6, .col-md-3 {
+    padding-left: 5px; /* Adjust padding for grid items */
+    padding-right: 5px;
+}
+
 
 
 .custom-navbar-bg {
@@ -43,13 +57,12 @@
    font-family: Verdana, Geneva, Tahoma, sans-serif;
     text-align: center;
 
-
 }
 
 .navbar-brand img {
     width: 30px;
     height: auto;
-    margin-right: 10px;
+    margin-right: 5px;
     border-color: #f39111;
 
 }
@@ -83,8 +96,8 @@
 }
 
 .card {
-    margin-bottom: 2px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    margin-bottom: 1px;
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.1);
     transition: box-shadow 0.3s ease;
     display: flex;
     background-color: white;
@@ -99,7 +112,7 @@
     width: 100%;
     height: 200px;
     object-fit: cover;
-    padding-top: 10px;
+    padding-top: 2px;
     border-top-left-radius: 0.25rem;
     border-top-right-radius: 0.25rem;
 }
@@ -237,9 +250,10 @@
 }
 
 @media (max-width: 767px) {
-    .cart-container {
+    .container {
         position: relative;
         display: inline-block;
+        margin: 10px;
     }
 
     .cart-icon {
@@ -673,12 +687,11 @@ padding-right: 1px;
     color: #d9534f;
 }
 
-.modal-footer {
-    background-color: #f5f5f5;
-    border-top: 1px solid #ddd;
-    justify-content: space-between;
+.modal-footer button {
+    width: 20%; /* Set the button width to 20% */
+    margin-left: auto; /* Keeps the button on the right */
+    background-color: #fff;
 }
-
 #checkout-button {
     width: 100%;
     background-color: #d9534f;
