--- a/shop.css
+++ b/shop.css
@@ -27,11 +27,11 @@
 }
 
 .product-card {
-    padding: 5px; /* Reduce padding within each product card */
+    padding: 3px; /* Reduce padding within each product card */
 }
 
 .product-card .card {
-    margin-bottom: 10px; /* Reduce the margin between cards */
+    margin-bottom: 6px; /* Reduce the margin between cards */
 }
 
 #product-list {
@@ -110,15 +110,11 @@
 
 .card-img-top {
     width: 100%;
-    height: 200px;
+    height: 180px;
     object-fit: cover;
-    padding-top: 2px;
+    padding: 5px;
     border-top-left-radius: 0.25rem;
     border-top-right-radius: 0.25rem;
-}
-
-.card-body {
-    padding: 1.0rem;
 }
 
 .card-title-box {
@@ -135,14 +131,14 @@
 }
 
 .card-title {
-    font-size: 15px;
+    font-size: 12px;
     color: #333;
     font-synthesis-weight: 1;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .card-text {
-    font-size: 13px;
+    font-size: 12px;
     color: #666;
 }
 
