--- a/shop.css
+++ b/shop.css
@@ -360,8 +360,21 @@
         font-synthesis-weight: 1;
     }
 
-
-
+    .container {
+        margin: 10px;
+      }
+      .item-price {
+            font-size: 12px;
+            font-weight: bold;
+        }
+    
+        .item-details h6 {
+            font-size: 0.85rem; /* Smaller font size for mobile */
+        }
+    
+        .item-details p {
+            font-size: 0.75rem; /* Smaller font size for mobile */
+        }
 
 }
 
