--- a/shop.css
+++ b/shop.css
@@ -250,11 +250,11 @@ html {
     align-items: flex-start;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 767px) {
     .container {
         position: relative;
         display: inline-block;
-        margin: 10px;
+        margin: 5px;
     }
 
     .cart-icon {
@@ -365,7 +365,18 @@ html {
     }
 
 
+    .item-price {
+        font-size: 12px;
+        font-weight: bold;
+    }
 
+    .item-details h6 {
+        font-size: 0.85rem; /* Smaller font size for mobile */
+    }
+
+    .item-details p {
+        font-size: 0.75rem; /* Smaller font size for mobile */
+    }
 
 }
 
