--- a/shop.css
+++ b/shop.css
@@ -260,7 +260,11 @@ html {
     html, body {
         overflow-x: hidden;
     }
-
+    .container {
+        position: relative;
+        display: inline-block;
+        margin: 7px;
+    }
     .fixed-element, .absolute-element {
         max-width: 100vw;
     }
@@ -387,6 +391,7 @@ html {
         font-size: 0.75rem; /* Smaller font size for mobile */
     }
 
+}
 
 .button-container {
     display: flex;
