--- a/shop.css
+++ b/shop.css
@@ -189,7 +189,7 @@ html {
 
 /* Footer styles */
 .footer {
-    background-color: #a7a6a6;
+    background-color: rgb(12, 12, 48);
     padding: 20px 0;
 }
 
